# ZeusBot

./: .bandit  .editorconfig  .eslintrc.js  .flake8  .gitignore  .mypy.ini  .prettierrc  README.md  dev-requirements.txt  noxfile.py  package.json  pyproject.toml  requirements.txt
node/: application.yml
scripts/: clean.py
zeusbot/: __main__.py
zeusbot/bot/: bot.py  client.py
zeusbot/bot/modules/: music.py
zeusbot/utils/: __init__.py  config.py  hikari.py  music.py
