[tool.poetry]
name = "zeusbot"
version = "0.1.0"
description = "A Discord bot made using Hikari/Tanjun."
authors = ["Sai Kumar <ksai44576@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
