[tool.poetry]
name = "zeusbot"
version = "0.1.0"
description = "A Discord bot made using Hikari/Tanjun."
authors = ["Sai Kumar <ksai44576@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
apscheduler = "^3.9.1.post1"
asyncpg = "^0.27.0"
fastapi = "^0.87.0"
hikari = {extras = ["speedups"], version = "^2.0.0.dev112"}
hikari-tanjun = "^2.9.0a1"
lavaplayer = "^1.0.10a0"
uvicorn = "^0.19.0"
uvloop = {version = "^0.17.0", platform = "!=win32"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
